# rpg

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  INSTALL.md  LICENSE  README.md  banner.txt  justfile  rpg.1  rpg.txt  verify.sh
.github/workflows/: ci.yml
benches/: password_generation.rs
coverage-test/: cobertura.xml
src/: lib.rs  main.rs
tests/: integration_test.rs
